--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ dotenv = "0.15.0"
 futures-util = "0.3.31"
 hex = "0.4.3"
 hmac = "0.12.1"
-reqwest = { version = "0.12.23", features = ["json"] }
+reqwest = { version = "0.12.23", features = ["json", "rustls-tls"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.142"
 sha2 = "0.10.9"
-tokio = { version = "1.47.1", features = ["sync", "tracing"] }
-tokio-tungstenite = "0.27.0"
+tokio = { version = "1.47.1", features = ["sync", "tracing", "rt", "rt-multi-thread", "macros"] }
+tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
 tracing = { version = "0.1.41", optional = true }
 
 [features]
